# LOLChampions

./: .gitignore  API.http  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: DataManager.cpp  DataManager.h  GuiManager.cpp  GuiManager.h  main.cpp
